--- a/.classpath
+++ b/.classpath
@@ -7,8 +7,11 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/musitech"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/utility"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/utils"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/formats-representations"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/analysis"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/path"/>
+	<classpathentry kind="lib" path="/utils/lib/musitech.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
